Re-check for bug & error

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -11,7 +11,7 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="https://shinhanbankvay24h.com.vn/"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
+                   <a href="/home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Liên Hệ</span>
                 </div>
