--- a/views/creditcard.handlebars
+++ b/views/creditcard.handlebars
@@ -8,7 +8,7 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-					<a href="https://shinhanbankvay24h.com.vn/"><i class="icon-home"></i> Trang Chủ</a>
+					<a href="/home"><i class="icon-home"></i> Trang Chủ</a>
 					<span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
 					<a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ
 						SHINHANBANK</a>
@@ -304,7 +304,7 @@
 						<div class="thumb-left">
 							<a
 								href="/vay-tin-chap-vay-tieu-dung">
-								<img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG"
+								<img src="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG"
 									style="max-width:100%;" class="img-responsive"
 									title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank."
 									alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
@@ -327,7 +327,7 @@
 						<div class="thumb-left">
 							<a
 								href="/tung-bung-khai-truong">
-								<img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg"
+								<img src="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg"
 									style="max-width:100%;" class="img-responsive"
 									title="Tưng bừng khai trương, nhận nghìn quà tặng"
 									alt="Tưng bừng khai trương, nhận nghìn quà tặng">
@@ -350,7 +350,7 @@
 						<div class="thumb-left">
 							<a
 								href="/vay-tin-chap">
-								<img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png"
+								<img src="/public/image/ab03c4fdadadd4157f0073850ce3d832.png"
 									style="max-width:100%;" class="img-responsive"
 									title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường."
 									alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
@@ -372,7 +372,7 @@
 					<div class="loop-blog">
 						<div class="thumb-left">
 							<a href="/rut-tien-td">
-								<img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg"
+								<img src="/public/image/3b05f83f529e3602eef89682a41678db.jpg"
 									style="max-width:100%;" class="img-responsive"
 									title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG"
 									alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
@@ -395,7 +395,7 @@
 						<div class="thumb-left">
 							<a
 								href="/thoa-trai-nghiem">
-								<img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg"
+								<img src="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg"
 									style="max-width:100%;" class="img-responsive"
 									title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)"
 									alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
@@ -418,7 +418,7 @@
 						<div class="thumb-left">
 							<a
 								href="/quy-khach-se-de-dang">
-								<img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg"
+								<img src="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg"
 									style="max-width:100%;" class="img-responsive"
 									title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank "
 									alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
@@ -441,7 +441,7 @@
 						<div class="thumb-left">
 							<a
 								href="/niem-tin-cua-nd">
-								<img src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg"
+								<img src="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg"
 									style="max-width:100%;" class="img-responsive"
 									title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan"
 									alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
@@ -619,7 +619,7 @@
 				<div class="row">
 					<div class="title-text-vaytindung" style="margin-top: 30px;">
 						<h2>Đăng Kí Vay Tiêu Dùng</h2>
-						<form action="https://shinhanbankvay24h.com.vn/dichvu/dangki" method="post" class="formdangki">
+						<form method="post" class="formdangki">
 							<div class="wrap-modal-vaytieudung">
 								<div class="panel-cart-group">
 									<span class="panel-cart-text">Họ Và Tên (*):</span>
