--- a/views/mortgage.handlebars
+++ b/views/mortgage.handlebars
@@ -73,7 +73,7 @@
 <div class="t-right">
 <div class="number">8,7<sup>%/năm</sup></div>
 <p class="t-bt">cố định 4 năm đầu</p>
-<p class="t-bt"><img src="/public/image/hinh%20anh%20shinhan%20%202.jpg" alt="" width="580" height="387" /></p>
+<p class="t-bt"><img src="/public/image/hinhanhshinhan.jpg" alt="" width="580" height="387" /></p>
 </div>
 </div>
 </div>
@@ -176,7 +176,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+	                           <img src="/public/image/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -193,7 +193,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/niem-tin-cua-nd">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
+	                           <img src="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -210,7 +210,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/tung-bung-khai-truong">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
+	                           <img src="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -227,7 +227,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap-vay-tieu-dung">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+	                           <img src="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -244,7 +244,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/thoa-trai-nghiem">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
+	                           <img src="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -261,7 +261,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/rut-tien-td">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
+	                           <img src="/public/image/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -278,7 +278,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/quy-khach-se-de-dang">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
+	                           <img src="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
 					     </a>
 				    </div>
 				   <div class="name-right">
