--- a/views/rut-tien-td.handlebars
+++ b/views/rut-tien-td.handlebars
@@ -34,7 +34,7 @@
             <div class="wrapcontent">
               
                <p>BẠN ĐÃ CÓ THẺ TÍN DỤNG TẠI CÁC NGÂN HÀNG VÀ CÁC TỔ CHỨC TÀI CHÍNH</p>
-<p><img src="/rut-tien-td/../../../source/tin-tuc/cac-loai-the-tin-dung.jpg" alt="" width="660" height="456" /></p>
+<p><img src="/public/image/cac-loai-the-tin-dung.jpg" alt="" width="660" height="456" /></p>
 <p>Nhưng lại không biếc cách sử dụng thẻ tín dụng như thế nào, không biếc về mức lãi ra sao.</p>
 <p>SAU ĐÂY LÀ MỘT SỐ CÁCH HƯỚNG DẪN RÚT TIỀN MẶT TỪ THẺ TÍN DỤNG CỦA CÁC NGÂN HÀNG MÀ BẠN ĐANG CÓ.</p>
 <p>1. Rút tiền tại trụ ATM của các ngân hàng.</p>
@@ -57,7 +57,7 @@
 <p><span style="color: #e03e2d;"><span style="color: #000000;">         Nhân viên ngân hàng sẽ đến tận nơi để hướng dẫn và hoàn thiện thủ tục chuyển đổi trả góp cho bạn chỉ trong 5 phút</span></span></p>
 <p><span style="color: #e03e2d;"><span style="color: #000000;">         Điều quan trọng là không mất phí rút tiền .</span></span></p>
 <p><span style="color: #e03e2d;"><span style="color: #000000;">Hãy gọi ngay cho nhân viên Ngân hàng để được hỗ trợ .</span></span></p>
-<div class="wrap-tempale-bon row"><a class="btn-tempale" href="#"> Liên Hệ Tư Vấn  : MR phong 0862505919 zalo : 0934754919</a></div>
+<div class="wrap-tempale-bon row"><a class="btn-tempale" href="#"> Liên Hệ Tư Vấn  : MR phong 0707183645 zalo : 0934754919</a></div>
 <p><span style="color: #e03e2d;">         </span></p>              
             </div>
             
@@ -86,7 +86,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/niem-tin-cua-nd">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
+	                           <img src="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -103,7 +103,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/tung-bung-khai-truong">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
+	                           <img src="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -120,7 +120,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/thoa-trai-nghiem">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
+	                           <img src="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -137,7 +137,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+	                           <img src="/public/image/ab03c4fdadadd4157f0073850ce3d832.jpg" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -154,7 +154,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap-vay-tieu-dung">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+	                           <img src="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -171,7 +171,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/quy-khach-se-de-dang">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
+	                           <img src="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -238,7 +238,7 @@
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
 <p><p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
-<p>Hotline: 0862505919</p></p>
+<p>Hotline: 0707183645</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
@@ -335,7 +335,7 @@
                 <div class="row">
                    <div class="title-text-vaytindung" style="margin-top: 30px;">
 			        <h2>Đăng Kí Vay Tiêu Dùng</h2>
-					<form action="https://shinhanbankvay24h.com.vn/dichvu/dangki" method="post" class="formdangki">
+					<form method="post" class="formdangki">
 					<div class="wrap-modal-vaytieudung">
 						<div class="panel-cart-group">
 							<span class="panel-cart-text">Họ Và Tên (*):</span>
