--- a/views/thoa-trai-nghiem.handlebars
+++ b/views/thoa-trai-nghiem.handlebars
@@ -121,51 +121,6 @@
             
             
        </div>
-       <div class="commentnews">
-         <div class="tab-pane" id="reviews">
-                <div class="pro-tab-info pro-reviews" style="border: 1px solid #eaeaea;">
-                <!-- gui bình luận -->
-                <div class="leave-review">
-                <h3 class="small-title">Bình luận về tin tức này</h3>
-                <div class="reply-box">
-                <div class="form-horizontal">
-                <div class="form-group">
-                <div class="col-md-6">
-                <input class="form-control" type="text" name="Name" placeholder="Tên người bình luận" id="commentnameuser">
-                </div>
-                <div class="col-md-6">
-                <input class="form-control" name="subject" type="text" placeholder="Số Phone (Không bắt buộc)" id="commentphoneuser">
-                </div>
-                </div>
-                <div class="form-group">
-                <div class="col-md-12">
-                <textarea class="form-control input-lg" name="comment" rows="4" placeholder="Nội dung bình luận" id="binhluansanpham"></textarea>
-                </div>
-                </div>
-                <div class="form-group">
-                <div class="col-md-12">
-                <input type="hidden" value="/thoa-trai-nghiem" name="linkpr" id="linkpr"/>
-                <input type="hidden" value="63" name="idpr" id="idpr"/>
-               
-                <button class="btn-common-bl submitbinhluannews" type="button"><h2 style="font-size: 14px">Gửi Bình Luận</h2></button>
-                <div class="rating"></div>
-                </div>
-                </div>
-                </div>
-                </div>
-                </div>
-                <!-- end gửi bình luận -->
-                <div class="customer-review">
-                                <div class="pagecommentnew" idpagenew="1" idnew="63">
-                
-                </div>
-                <p class="xemthembinhluan xemthembinhluancmnew"><i class="fa fa-hand-o-right" aria-hidden="true"></i> Xem Thêm Bình luận</p>
-                
-                </div>
-                
-                 </div>
-         </div>
-       </div>
    </div>
    
    <div class="col-lg-3">
@@ -189,7 +144,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/niem-tin-cua-nd">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
+	                           <img src="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -206,7 +161,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/quy-khach-se-de-dang">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
+	                           <img src="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -223,7 +178,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+	                           <img src="/public/image/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -240,7 +195,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/rut-tien-td">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
+	                           <img src="/public/image/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -257,7 +212,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/tung-bung-khai-truong">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
+	                           <img src="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -274,7 +229,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap-vay-tieu-dung">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+	                           <img src="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -302,7 +257,7 @@
    <div class="container">
       <div class="row">
 	     <div class="title-text-vaytindung title-mr-70">
-			        <h2>TẠI SAO NÊN CHỌN TPBANK</h2>
+			        <h2>TẠI SAO NÊN CHỌN SHINHANBANK</h2>
 			     </div>
 				 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 		   <div class="item equalize">
@@ -340,8 +295,8 @@
 <div class="col-md-3 col-sm-6">
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
-<p><p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
-<p>Hotline: 0862505919</p></p>
+<p>
+<p>Hotline: 0707183645</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
@@ -360,10 +315,6 @@
       <input type="text" class="form-control textdangki" name="email" placeholder="Vui Lòng Nhập Email" style="margin-bottom: 5px">
       <button type="button" class="btn btn-common clickdangki">Đăng Kí</button>
 </div>
-</div>
-<div class="col-md-3 col-sm-6">
-     <h3 class="widget-title">Kết Nối Với Chúng Tôi</h3>
-     <div class="fb-page" data-href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" data-tabs="timeline" data-height="120" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689">Facebook</a></blockquote></div>
 </div>
 </div>
 </div>
