--- a/views/vay-tieu-dung.handlebars
+++ b/views/vay-tieu-dung.handlebars
@@ -8,7 +8,7 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="https://shinhanbankvay24h.com.vn/"><i class="icon-home"></i> Trang Chủ</a>
+                   <a href="/home"><i class="icon-home"></i> Trang Chủ</a>
                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Tin Tức</span>
                 </div>
@@ -35,11 +35,10 @@
             <div class="wrapcontent">
               
                <div class="td-post-header"><header class="td-post-title">
-<h1 class="entry-title"><span style="font-size: 20px;">Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank. </span></h1>
 </header></div>
 <div class="td-post-content tagdiv-type">
 <p class="brief"><em><strong>Vay tín chấp - Vay tiêu dùng</strong> tại <strong>Shinhan Bank</strong> để hưởng lãi suất ưu đãi. Quý khách đang lên kế hoạch cho đám cưới, xây sửa nhà hay cho con yêu du học?…Shinhan Bank sẽ đáp ứng kịp thời mọi nhu cầu về tài chính và giúp bạn có cuộc sống tốt đẹp hơn.</em></p>
-<p class="brief"><a href="../../blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong" target="_blank" rel="noopener">Tìm hiểu thêm về vay tín chấp</a></p>
+<p class="brief"><a href="/vay-tin-chap-vay-tieu-dung" target="_blank" rel="noopener">Tìm hiểu thêm về vay tín chấp</a></p>
 <p class="brief"><span style="font-size: 20px;"><strong>1. Lợi ích khi đăng ký khoản vay tín chấp - Vay tiêu dùng tại ngân hàng Shinhan Bank:</strong></span></p>
 <div class="content">
 <p style="text-align: center;"><strong><img class="aligncenter wp-image-191 td-animation-stack-type0-2" title="Vay tín chấp tiêu dùng ngân hàng Shinhanbank" src="https://taichinhaz.vn/wp-content/uploads/2020/04/vay-tin-chap-shihan-bank-300x200.jpg" sizes="(max-width: 800px) 100vw, 800px" srcset="https://taichinhaz.vn/wp-content/uploads/2020/04/vay-tin-chap-shihan-bank-300x200.jpg 300w, https://taichinhaz.vn/wp-content/uploads/2020/04/vay-tin-chap-shihan-bank-768x512.jpg 768w, https://taichinhaz.vn/wp-content/uploads/2020/04/vay-tin-chap-shihan-bank-696x464.jpg 696w, https://taichinhaz.vn/wp-content/uploads/2020/04/vay-tin-chap-shihan-bank-630x420.jpg 630w, https://taichinhaz.vn/wp-content/uploads/2020/04/vay-tin-chap-shihan-bank.jpg 850w" alt="Vay tín chấp tiêu dùng ngân hàng Shinhanbank" width="800" height="534" /></strong></p>
@@ -70,10 +69,10 @@
 <p>Tạm tính Lãi suất cố định chỉ từ <em>7.2%/năm</em> đến <em>9.5%/năm</em></p>
 <p>Cam kết lãi suất không tăng qua các năm.</p>
 <p><em>Bảng tính tiền đóng hàng tháng cho khách hàng tham khảo:</em></p>
-<p style="text-align: center;"><em><img src="/vay-tin-chap-vay-tieu-dung/../../source/IMG_0005_Original.jpg" alt="" width="771" height="758" /></em></p>
+<p style="text-align: center;"><em><img src="/public/image/IMG_0005_Original.jpg" alt="" width="771" height="758" /></em></p>
 </div>
 <h2 class="content"><span style="font-size: 20px;">3. Hạn Mức Vay Tín Chấp Theo Lương Shinhan Bank</span></h2>
-<p style="text-align: center;"><strong><img class="aligncenter wp-image-196 td-animation-stack-type0-2" title="Hạn mức vay Shinhan Bank" src="https://taichinhaz.vn/wp-content/uploads/2020/04/han-muc-vay-tin-chap-ngan-hang-shinhan-bank-300x81.jpg" sizes="(max-width: 800px) 100vw, 800px" srcset="https://taichinhaz.vn/wp-content/uploads/2020/04/han-muc-vay-tin-chap-ngan-hang-shinhan-bank-300x81.jpg 300w, https://taichinhaz.vn/wp-content/uploads/2020/04/han-muc-vay-tin-chap-ngan-hang-shinhan-bank-768x206.jpg 768w, https://taichinhaz.vn/wp-content/uploads/2020/04/han-muc-vay-tin-chap-ngan-hang-shinhan-bank-696x187.jpg 696w, https://taichinhaz.vn/wp-content/uploads/2020/04/han-muc-vay-tin-chap-ngan-hang-shinhan-bank.jpg 800w" alt="Hạn mức vay Shinhan Bank" width="800" height="215" /></strong></p>
+<p style="text-align: center;"><strong><img class="aligncenter wp-image-196 td-animation-stack-type0-2" title="Hạn mức vay Shinhan Bank" src="/public/image/han-muc-vay-tin-chap-ngan-hang-shinhan-bank-300x81.jpg" sizes="(max-width: 800px) 100vw, 800px" srcset="/public/image/han-muc-vay-tin-chap-ngan-hang-shinhan-bank-300x81.jpg 300w, https://taichinhaz.vn/wp-content/uploads/2020/04/han-muc-vay-tin-chap-ngan-hang-shinhan-bank-768x206.jpg 768w, https://taichinhaz.vn/wp-content/uploads/2020/04/han-muc-vay-tin-chap-ngan-hang-shinhan-bank-696x187.jpg 696w, https://taichinhaz.vn/wp-content/uploads/2020/04/han-muc-vay-tin-chap-ngan-hang-shinhan-bank.jpg 800w" alt="Hạn mức vay Shinhan Bank" width="800" height="215" /></strong></p>
 <p><em>Hạn Mức Vay Theo Lương tại <strong>Ngân Hàng Shinhan Bank</strong></em></p>
 <p>Khách hàng chưa có khoản vay, hoặc đang có khoản vay, hoặc thẻ tín dụng tại các Ngân hàng khác dưới 3 tháng:</p>
 <p>– Mức lương trên 8 triệu/tháng: hạn mức vay tiêu dùng ngân hàng <strong>Shinhan Bank</strong> lên đến 6 lần thu nhập.</p>
@@ -90,8 +89,8 @@
 <p>– Chứng minh nhân dân còn hiệu lực.</p>
 <p>– Hộ khẩu thường trú, hoặc Sổ tạm trú (KT3), hoặc Giấy xác nhận tạm trú (theo mẫu của ngân hàng Shinhan Bank)</p><div class='showquangcaogiua'></div>
 <p>– Hồ sơ chứng minh thu nhập: Hợp đồng lao động (hoặc Giấy xác nhận công tác – theo mẫu), Sao kê tài khoản ngân hàng thể hiện mức lương của 3 tháng gần nhất.</p>
-<div>Gọi ngay hotline: 0862505919 để được tư vấn miễn phí</div>
-<div>Đăng Kí Vay <a href="../../../">https://shinhanbankvay24h.com.vn/</a></div>
+<div>Gọi ngay hotline: 0707183645 để được tư vấn miễn phí</div>
+<div>Đăng Kí Vay <a href="/home">TẠI ĐÂY</a></div>
 </div></p>              
             </div>
             
@@ -108,10 +107,10 @@
     <h4>SẢN PHẨM DỊCH VỤ SHINHANBANK</h4>
     </div>
     <ul id="accordion-category" class="product-cat">
-          <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">Vay Tiêu Dùng </a></li>
-         <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">thẻ tín dụng shinhanbank </a></li>
-         <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
-         <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
+          <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
+         <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+         <li><a href="/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
+         <li><a href="/tien-ich/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
        
     </ul>
 </div>
@@ -123,7 +122,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/tung-bung-khai-truong">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
+	                           <img src="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -140,7 +139,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/thoa-trai-nghiem">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
+	                           <img src="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -157,7 +156,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+	                           <img src="/public/image/ab03c4fdadadd4157f0073850ce3d832.jpg" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -174,7 +173,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/niem-tin-cua-nd">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
+	                           <img src="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -191,7 +190,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/rut-tien-td">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
+	                           <img src="/public/image/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -208,7 +207,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/quy-khach-se-de-dang">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
+	                           <img src="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -236,7 +235,7 @@
    <div class="container">
       <div class="row">
 	     <div class="title-text-vaytindung title-mr-70">
-			        <h2>TẠI SAO NÊN CHỌN TPBANK</h2>
+			        <h2>TẠI SAO NÊN CHỌN SHINHANBANK</h2>
 			     </div>
 				 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 		   <div class="item equalize">
@@ -275,16 +274,16 @@
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
 <p><p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
-<p>Hotline: 0862505919</p></p>
+<p>Hotline: 0707183645</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
 <h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
 <ul>
-      <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">Vay Tiêu Dùng </a></li>
-     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">thẻ tín dụng shinhanbank </a></li>
-     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
-     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
+      <li><a href="/tien-ich/vay-tieu-dung">Vay Tiêu Dùng </a></li>
+     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+     <li><a href="/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
+     <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
    
 </ul>
   </div>
@@ -376,7 +375,7 @@
                 <div class="row">
                    <div class="title-text-vaytindung" style="margin-top: 30px;">
 			        <h2>Đăng Kí Vay Tiêu Dùng</h2>
-					<form action="https://shinhanbankvay24h.com.vn/dichvu/dangki" method="post" class="formdangki">
+					<form method="post" class="formdangki">
 					<div class="wrap-modal-vaytieudung">
 						<div class="panel-cart-group">
 							<span class="panel-cart-text">Họ Và Tên (*):</span>
