--- a/views/vay-tin-chap.handlebars
+++ b/views/vay-tin-chap.handlebars
@@ -40,7 +40,7 @@
 <li>Vay tiêu dùng</li>
 <li>Vay tiêu dùng thông minh trên ứng dụng Zalo</li>
 </ul>
-<p>Là hình thức vay tín chấp theo lương truyền thống cho mục đích tiêu dùng, xây sửa nhà, đám cưới, du học cho con. Khách hàng có nhu cầu vay vốn sẽ đăng ký trực tiếp qua hotline https://shinhanbankvay24h.com.vn/</p>
+<p>Là hình thức vay tín chấp theo lương truyền thống cho mục đích tiêu dùng, xây sửa nhà, đám cưới, du học cho con. Khách hàng có nhu cầu vay vốn sẽ đăng ký trực tiếp qua hotline 0707183645 (Mr.Bằng)</p>
 <ul>
 <li>Hạn mức vay: tối đa 900 triệu đồng</li>
 <li>Thời gian vay: 12 - 60 tháng</li>
@@ -57,10 +57,10 @@
 <p><strong>3. Cách tính lãi suất vay tín chấp Shinhan Bank 2020</strong></p>
 <p>Vay tiêu dùng ngân hàng Shinhan 2020 là chương trình vay tín chấp bằng lương<em><strong> </strong></em>dành cho khách hàng là cán bộ, nhân viên làm việc trong tổ chức kinh tế hoặc cơ quan nhà nước, đơn vị hành chính sự nghiệp.</p>
 <p>Khách hàng chứng minh thu nhập bằng cách sao kê tài khoản lương trong 3 tháng gần nhất. Lãi suất vay tín chấp Shinhanbank được tính trên dư nợ giảm dần. Để  hiểu rõ, khách hàng có thể xem bảng tính sau: </p>
-<p><img style="display: block; margin-left: auto; margin-right: auto;" src="/vay-tin-chap/../../source/IMG_0005_Original.jpg" alt="" width="771" height="758" /></p>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" src="/public/image/IMG_0005_Original.jpg" alt="" width="771" height="758" /></p>
 <p> </p>
 <p> </p>
-<p><img style="display: block; margin-left: auto; margin-right: auto;" title="Vay tín chấp tại ngân hàng Shinhan Bank 2018" src="https://img.topbank.vn/2018/04/16/pXubIXvx/shinhanbank-vietnam-e3b5.jpg" alt="Vay tín chấp tại ngân hàng Shinhan Bank " data-class="" data-height="" data-style="" data-width="600" /></p>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" title="Vay tín chấp tại ngân hàng Shinhan Bank 2018" src="/public/image/shinhanbank-vietnam-e3b5.jpg" alt="Vay tín chấp tại ngân hàng Shinhan Bank " data-class="" data-height="" data-style="" data-width="600" /></p>
 <p style="text-align: center;">Vay tín chấp tại ngân hàng Shinhan Bank 2020</p>
 <p> </p>
 <p>Đặc biệt với các khách hàng quen thuộc của ngân hàng Shinhan sẽ được hưởng lãi suất vay tín chấp<em><strong> </strong></em><strong>thấp hơn</strong> so với mức quy định, gồm có những khách hàng thuộc diện sau: </p>
@@ -78,7 +78,7 @@
 <li>Đặc biệt: khách hàng không có nợ xấu tại bất cứ tổ chức tín dụng nào. </li>
 </ul>
 <p> </p>
-<p><img style="display: block; margin-left: auto; margin-right: auto;" title="Thủ tục vay tín chấp ngân hàng Shinhan bank 2018" src="https://img.topbank.vn/2018/04/16/pXubIXvx/vay-tin-chap-shinhan-2f3b.png" alt="Thủ tục vay tín chấp ngân hàng Shinhan bank" data-class="" data-height="" data-style="" data-width="" /></p><div class='showquangcaogiua'></div>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" title="Thủ tục vay tín chấp ngân hàng Shinhan bank 2018" src="/public/image/vay-tin-chap-shinhan-2f3b.png" alt="Thủ tục vay tín chấp ngân hàng Shinhan bank" data-class="" data-height="" data-style="" data-width="" /></p><div class='showquangcaogiua'></div>
 <p> </p>
 <p><em>Thủ tục vay tín chấp ngân hàng ShinhanBank 2020</em></p>
 <p>Khách hàng đáp ứng các điều kiện trên, sử dụng dịch vụ vay tín chấp Shinhan Bank cần chuẩn bị các giấy tờ sau để hoàn tất thủ tục vay vốn.</p>
@@ -90,7 +90,7 @@
 <li>Chứng từ sở hữu tài sản hoặc giấy tờ hợp lệ có liên quan (nếu có)</li>
 </ul>
 <p> </p>
-<p>Trên đây là thông tin về<strong> lãi suất vay tín chấp Shinhanbank 2020</strong>, hi vọng sẽ giúp ích bạn đọc lựa chọn phương án hợp lý cho khoản vay tín chấp của mình. Khách hàng quan tâm và có nhu cầu hỗ trợ<em><strong> </strong></em>tư vấn về khoản vay tín chấp<em><strong> </strong></em>có thể liên hệ trực tiếp với https://shinhanbankvay24h.com.vn/</p>              
+<p>Trên đây là thông tin về<strong> lãi suất vay tín chấp Shinhanbank 2020</strong>, hi vọng sẽ giúp ích bạn đọc lựa chọn phương án hợp lý cho khoản vay tín chấp của mình. Khách hàng quan tâm và có nhu cầu hỗ trợ<em><strong> </strong></em>tư vấn về khoản vay tín chấp<em><strong> </strong></em>có thể liên hệ trực tiếp tới hotline: 0707183645 (Mr.Bằng)</p>              
             </div>
             
             
@@ -118,7 +118,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap-vay-tieu-dung">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+	                           <img src="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -135,7 +135,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/quy-khach-se-de-dang">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
+	                           <img src="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -152,7 +152,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/tung-bung-khai-truong">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
+	                           <img src="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -169,7 +169,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/thoa-trai-nghiem">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
+	                           <img src="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -186,7 +186,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+	                           <img src="/public/image/ab03c4fdadadd4157f0073850ce3d832.jpg" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -203,7 +203,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/rut-tien-td">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
+	                           <img src="/public/image/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -270,7 +270,7 @@
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
 <p>
-<p>Hotline: 0862505919</p></p>
+<p>Hotline: 0707183645</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
@@ -367,7 +367,7 @@
                 <div class="row">
                    <div class="title-text-vaytindung" style="margin-top: 30px;">
 			        <h2>Đăng Kí Vay Tiêu Dùng</h2>
-					<form action="https://shinhanbankvay24h.com.vn/dichvu/dangki" method="post" class="formdangki">
+					<form method="post" class="formdangki">
 					<div class="wrap-modal-vaytieudung">
 						<div class="panel-cart-group">
 							<span class="panel-cart-text">Họ Và Tên (*):</span>
