--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,12 +2,12 @@
     <div class="touch-slider owl-carousel owl-loaded" data-slider-pagination="true">
         <div class="item">
             <a href="home"><img
-                    src="https://shinhanbankvay24h.com.vn/upload/slider/dff7290ad75168b8ae2014e28e5ce41f.jpg"
+                    src="/public/image/dff7290ad75168b8ae2014e28e5ce41f.jpg"
                     alt="vay nhanh tín dụng"></a>
         </div>
         <div class="item">
             <a href="home"><img
-                    src="https://shinhanbankvay24h.com.vn/upload/slider/8b12544a774c93b32258bf6131cd8e12.png"
+                    src="/public/image/8b12544a774c93b32258bf6131cd8e12.png"
                     alt="phê duyệt nhanh "></a>
         </div>
 
@@ -27,7 +27,7 @@
                     <a href="/vay-tieu-dung">
                         <div class="item-home equalize">
 
-                            <img src="https://shinhanbankvay24h.com.vn/upload/catalog/c89343e945eea8eddccbefdd47c1c766.png"
+                            <img src="/public/image/c89343e945eea8eddccbefdd47c1c766.png"
                                 alt="">
                             <div class="title">
                                 Vay Tiêu Dùng </div>
@@ -41,7 +41,7 @@
                     <a href="/vay-the-chap-nha-dat">
                         <div class="item-home equalize">
 
-                            <img src="https://shinhanbankvay24h.com.vn/upload/catalog/cf3c612d0921b472a062636dc7a58fdd.jpg"
+                            <img src="/public/image/cf3c612d0921b472a062636dc7a58fdd.jpg"
                                 alt="">
                             <div class="title">
                                 Vay Thế Chấp Nhà đất </div>
@@ -57,7 +57,7 @@
                     <a href="/the-tin-dung-shinhanbank">
                         <div class="item-home equalize">
 
-                            <img src="https://shinhanbankvay24h.com.vn/upload/catalog/c83ecd8d31c050cf081e159111e7a696.jfif"
+                            <img src="/public/image/c83ecd8d31c050cf081e159111e7a696.jfif"
                                 alt="">
                             <div class="title">
                                 thẻ tín dụng shinhanbank </div>
@@ -71,7 +71,7 @@
                     <a href="/ho-tro-cong-nhan-va-tu-doanh">
                         <div class="item-home equalize">
 
-                            <img src="https://shinhanbankvay24h.com.vn/upload/catalog/5b0e3eb901f2da618e175595c96ee068.jpg"
+                            <img src="/public/image/5b0e3eb901f2da618e175595c96ee068.jpg"
                                 alt="">
                             <div class="title">
                                 Hỗ Trợ Công Nhân và Tự Doanh </div>
@@ -283,8 +283,8 @@
                         <a
                             href="/quy-khach-se-de-dang">
                             <img class="lazy"
-                                data-original="https://shinhanbankvay24h.com.vn/upload/product/a249c6cb182ab86936dba6f1d289692e.jpg"
-                                src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg"
+                                data-original="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg"
+                                src="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg"
                                 alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank "
                                 title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
                         </a>
@@ -306,8 +306,8 @@
                         <a
                             href="/vay-tin-chap">
                             <img class="lazy"
-                                data-original="https://shinhanbankvay24h.com.vn/upload/product/ab03c4fdadadd4157f0073850ce3d832.png"
-                                src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png"
+                                data-original="/public/image/ab03c4fdadadd4157f0073850ce3d832.jpg"
+                                src="/public/image/ab03c4fdadadd4157f0073850ce3d832.jpg"
                                 alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường."
                                 title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
                         </a>
@@ -328,8 +328,8 @@
                     <div class="blog-img">
                         <a href="/rut-tien-td">
                             <img class="lazy"
-                                data-original="https://shinhanbankvay24h.com.vn/upload/product/3b05f83f529e3602eef89682a41678db.jpg"
-                                src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg"
+                                data-original="/public/image/3b05f83f529e3602eef89682a41678db.jpg"
+                                src="/public/image/3b05f83f529e3602eef89682a41678db.jpg"
                                 alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG"
                                 title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
                         </a>
@@ -350,8 +350,8 @@
                         <a
                             href="/vay-tin-chap">
                             <img class="lazy"
-                                data-original="https://shinhanbankvay24h.com.vn/upload/product/a188add40d415a128d9b4ffbdb68f632.JPG"
-                                src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG"
+                                data-original="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG"
+                                src="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG"
                                 alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank."
                                 title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
                         </a>
@@ -372,8 +372,8 @@
                     <div class="blog-img">
                         <a href="/tung-bung-khai-truong">
                             <img class="lazy"
-                                data-original="https://shinhanbankvay24h.com.vn/upload/product/bd6eaab62077069666f51a3d203f2f2a.jpg"
-                                src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg"
+                                data-original="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg"
+                                src="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg"
                                 alt="Tưng bừng khai trương, nhận nghìn quà tặng"
                                 title="Tưng bừng khai trương, nhận nghìn quà tặng">
                         </a>
@@ -395,8 +395,8 @@
                         <a
                             href="#">
                             <img class="lazy"
-                                data-original="https://shinhanbankvay24h.com.vn/upload/product/279cf4dee50aae9998c6ec8e87e25e59.jpg"
-                                src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg"
+                                data-original="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg"
+                                src="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg"
                                 alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)"
                                 title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
                         </a>
@@ -405,7 +405,7 @@
                     <div class="blog-info">
 
                         <h3><a
-                                href="#">Thỏa
+                                href="/thoa-trai-nghiem">Thỏa
                                 trải nghiệm - Hoàn triệu điểm (Dành cho Khách ...</a></h3>
                         <p>Tặng đến 5 triệu điểm thưởng dành cho Khách hàng Thẻ tín dụng Doanh nghiệp Shinhan</p>
 
@@ -418,8 +418,8 @@
                         <a
                             href="/niem-tin-cua-nd">
                             <img class="lazy"
-                                data-original="https://shinhanbankvay24h.com.vn/upload/product/34e6bd2320923ac2c0ef7e6189a20833.jpg"
-                                src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg"
+                                data-original="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg"
+                                src="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg"
                                 alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan"
                                 title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
                         </a>
